# Aiken-Project

./: .gitignore  GIT_SETUP.md  README.md  aiken.toml  docker-compose.preprod.yml  init_git.sh  init_git_repo.py  plutus.json  setup_git.sh
docs/: README.md  aiken-test-discovery.md  aiken-v1.1.19-test-discovery-requirements.md  cardano-cli-setup.md  cardano-ecosystem-overview.md  contribution-guide.md  glossary.md  install-ogmios-kupo-macos.md  mainnet-migration.md  python-setup.md  repository-inventory.md  retirement-log.md  solution-architecture.md  testing-guide.md  testnet-deployment.md  troubleshooting-kupo-endpoint.md
infra/: docker-compose.yml
offchain/: .gitignore  README.md  TESTING.md  cli.py  pyproject.toml  requirements.txt
offchain/docs/: testing-with-preprod.md
offchain/offchain/: __init__.py  config.py  kupo_client.py  milestone_manager.py  models.py  ogmios_client.py  validator_loader.py
offchain/tests/: __init__.py
offchain/tests/contract/: __init__.py
offchain/tests/integration/: __init__.py  test_check_status.py  test_commit_milestone.py  test_infrastructure_connectivity.py  test_init.py  test_register_milestone.py  test_transaction_submission.py
offchain/tests/unit/: __init__.py  test_kupo_client.py  test_milestone_manager.py  test_ogmios_client.py
scripts/: deploy.sh  mint_test_tokens.sh  setup_env.sh  simulate_oracles.sh  start_node.sh  start_services.sh  test_preprod.sh  test_signing_keys.sh
src/: onchain_exports.aiken  onchain_exports.ak  test_simple.aiken  test_simple.ak  tests.aiken
validators/: example.ak  onchain_exports.ak  (+2 more)
(+71 files in other folders)
